Revert "ci-operator: add flags and volumes for multi-cluster execution"
This reverts commit be3b42a736ed996fb5599ef7a80f139daff59c74.

--- a/ci-operator/jobs/openshift/cluster-autoscaler-operator/openshift-cluster-autoscaler-operator-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/cluster-autoscaler-operator/openshift-cluster-autoscaler-operator-master-periodics.yaml
@@ -8,11 +8,7 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --git-ref=openshift/cluster-autoscaler-operator@master
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --secret-dir=/usr/local/e2e-aws-operator-cluster-profile
       - --target=e2e-aws-operator
       - --template=/usr/local/e2e-aws-operator
@@ -37,34 +33,13 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/e2e-aws-operator-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/e2e-aws-operator
         name: job-definition
         subPath: cluster-launch-installer-src.yaml
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -73,9 +48,6 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-src
       name: job-definition
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   decorate: true
   interval: 3h
@@ -85,11 +57,7 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --git-ref=openshift/cluster-autoscaler-operator@master
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --secret-dir=/usr/local/e2e-azure-operator-cluster-profile
       - --target=e2e-azure-operator
       - --template=/usr/local/e2e-azure-operator
@@ -114,34 +82,13 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/e2e-azure-operator-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/e2e-azure-operator
         name: job-definition
         subPath: cluster-launch-installer-src.yaml
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -150,9 +97,6 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-src
       name: job-definition
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   decorate: true
   interval: 3h
@@ -162,11 +106,7 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --git-ref=openshift/cluster-autoscaler-operator@master
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --secret-dir=/usr/local/e2e-gcp-operator-cluster-profile
       - --target=e2e-gcp-operator
       - --template=/usr/local/e2e-gcp-operator
@@ -191,34 +131,13 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/e2e-gcp-operator-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/e2e-gcp-operator
         name: job-definition
         subPath: cluster-launch-installer-src.yaml
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -227,6 +146,3 @@ periodics:
     - configMap:
         name: prow-job-cluster-launch-installer-src
       name: job-definition
-    - name: pull-secret
-      secret:
-        secretName: regcred
