--- a/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
@@ -12,13 +12,9 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --namespace=$(NAMESPACE)
       - --secret-dir=/usr/local/launch-$(CLUSTER_TYPE)-cluster-profile
       - --secret-dir=/usr/local/pull-secret
@@ -77,12 +73,6 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/launch-aws-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/launch-aws
@@ -90,23 +80,8 @@ periodics:
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -118,9 +93,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   cron: '@yearly'
   decorate: true
@@ -134,13 +106,9 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --namespace=$(NAMESPACE)
       - --secret-dir=/usr/local/launch-$(CLOUD_TYPE)-cluster-profile
       - --secret-dir=/usr/local/pull-secret
@@ -201,12 +169,6 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/launch-azure-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/launch-azure
@@ -214,23 +176,8 @@ periodics:
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -242,9 +189,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   cron: '@yearly'
   decorate: true
@@ -258,13 +202,9 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --namespace=$(NAMESPACE)
       - --secret-dir=/usr/local/launch-$(CLUSTER_TYPE)-cluster-profile
       - --secret-dir=/usr/local/pull-secret
@@ -323,12 +263,6 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/launch-gcp-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/launch-gcp
@@ -336,23 +270,8 @@ periodics:
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -364,9 +283,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   cron: '@yearly'
   decorate: true
@@ -380,15 +296,13 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
-      - --input-hash=$(BUILD_ID)
-      - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --namespace=$(NAMESPACE)
-      - --secret-dir=/usr/local/launch-$(CLUSTER_TYPE)-cluster-profile
       - --secret-dir=/usr/local/pull-secret
+      - --secret-dir=/usr/local/launch-$(CLUSTER_TYPE)-cluster-profile
       - --target=launch-metal
       - --template=/usr/local/launch-$(CLUSTER_TYPE)
+      - --namespace=$(NAMESPACE)
+      - --input-hash=$(BUILD_ID)
+      - --input-hash=$(JOB_NAME)
       command:
       - ci-operator
       env:
@@ -442,9 +356,6 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
       - mountPath: /usr/local/launch-metal-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/launch-metal
@@ -452,17 +363,8 @@ periodics:
         subPath: cluster-launch-installer-metal-e2e.yaml
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -474,9 +376,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   cron: '@yearly'
   decorate: true
@@ -490,13 +389,9 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --namespace=$(NAMESPACE)
       - --secret-dir=/usr/local/launch-$(CLUSTER_TYPE)-cluster-profile
       - --secret-dir=/usr/local/pull-secret
@@ -555,12 +450,6 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/launch-vsphere-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/launch-vsphere
@@ -568,23 +457,8 @@ periodics:
         subPath: cluster-launch-installer-upi-e2e.yaml
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -596,9 +470,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   cron: '@yearly'
   decorate: true
@@ -613,16 +484,12 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --lease-server=http://boskos
+      - --secret-dir=/usr/local/pull-secret
+      - --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-upgrade-cluster-profile
+      - --target=e2e-$(CLUSTER_TYPE)-upgrade
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
-      - --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-upgrade-cluster-profile
-      - --secret-dir=/usr/local/pull-secret
-      - --target=e2e-$(CLUSTER_TYPE)-upgrade
       command:
       - ci-operator
       env:
@@ -670,33 +537,12 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/e2e-aws-upgrade-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -705,9 +551,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   cron: '@yearly'
   decorate: true
@@ -721,16 +564,12 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --lease-server=http://boskos
+      - --secret-dir=/usr/local/pull-secret
+      - --secret-dir=/usr/local/e2e-azure-upgrade-cluster-profile
+      - --target=e2e-azure-upgrade
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
-      - --secret-dir=/usr/local/e2e-azure-upgrade-cluster-profile
-      - --secret-dir=/usr/local/pull-secret
-      - --target=e2e-azure-upgrade
       command:
       - ci-operator
       env:
@@ -766,33 +605,12 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/e2e-azure-upgrade-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -801,9 +619,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   cron: '@yearly'
   decorate: true
@@ -817,16 +632,12 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --lease-server=http://boskos
+      - --secret-dir=/usr/local/pull-secret
+      - --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-upgrade-cluster-profile
+      - --target=e2e-$(CLUSTER_TYPE)-upgrade
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
-      - --secret-dir=/usr/local/e2e-$(CLUSTER_TYPE)-upgrade-cluster-profile
-      - --secret-dir=/usr/local/pull-secret
-      - --target=e2e-$(CLUSTER_TYPE)-upgrade
       command:
       - ci-operator
       env:
@@ -874,33 +685,12 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/e2e-gcp-upgrade-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -911,6 +701,3 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
