--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.1-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.1-periodics.yaml
@@ -116,12 +116,6 @@ periodics:
         name: pull-secret
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -133,9 +127,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   decorate: true
   interval: 24h
@@ -149,13 +140,9 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --secret-dir=/usr/local/e2e-aws-cluster-profile
       - --secret-dir=/usr/local/pull-secret
       - --target=e2e-aws
@@ -210,12 +197,6 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/e2e-aws-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/e2e-aws
@@ -223,23 +204,8 @@ periodics:
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -251,9 +217,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   decorate: true
   interval: 24h
@@ -267,13 +230,9 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --secret-dir=/usr/local/e2e-aws-serial-cluster-profile
       - --secret-dir=/usr/local/pull-secret
       - --target=e2e-aws-serial
@@ -328,12 +287,6 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/e2e-aws-serial-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/e2e-aws-serial
@@ -341,23 +294,8 @@ periodics:
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -369,9 +307,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   decorate: true
   interval: 24h
@@ -384,13 +319,9 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --secret-dir=/usr/local/e2e-aws-cluster-profile
       - --secret-dir=/usr/local/pull-secret
       - --target=e2e-aws
@@ -445,12 +376,6 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/e2e-aws-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/e2e-aws
@@ -458,23 +383,8 @@ periodics:
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -486,9 +396,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   decorate: true
   interval: 24h
@@ -501,13 +408,9 @@ periodics:
     - args:
       - --artifact-dir=$(ARTIFACTS)
       - --give-pr-author-access-to-namespace=true
-      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
       - --input-hash=$(BUILD_ID)
       - --input-hash=$(JOB_NAME)
-      - --kubeconfig=/etc/apici/kubeconfig
-      - --lease-server-password-file=/etc/boskos/password
-      - --lease-server-username=ci
-      - --lease-server=https://boskos-ci.svc.ci.openshift.org
+      - --lease-server=http://boskos
       - --secret-dir=/usr/local/e2e-aws-serial-cluster-profile
       - --secret-dir=/usr/local/pull-secret
       - --target=e2e-aws-serial
@@ -562,12 +465,6 @@ periodics:
         requests:
           cpu: 10m
       volumeMounts:
-      - mountPath: /etc/apici
-        name: apici-ci-operator-credentials
-        readOnly: true
-      - mountPath: /etc/boskos
-        name: boskos
-        readOnly: true
       - mountPath: /usr/local/e2e-aws-serial-cluster-profile
         name: cluster-profile
       - mountPath: /usr/local/e2e-aws-serial
@@ -575,23 +472,8 @@ periodics:
         subPath: cluster-launch-installer-e2e.yaml
       - mountPath: /usr/local/pull-secret
         name: pull-secret
-      - mountPath: /etc/pull-secret
-        name: pull-secret
-        readOnly: true
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
-    - name: boskos
-      secret:
-        items:
-        - key: password
-          path: password
-        secretName: boskos-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -603,9 +485,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   decorate: true
   interval: 24h
@@ -701,12 +580,6 @@ periodics:
         name: pull-secret
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -715,9 +588,6 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
 - agent: kubernetes
   decorate: true
   interval: 24h
@@ -800,12 +670,6 @@ periodics:
         name: pull-secret
     serviceAccountName: ci-operator
     volumes:
-    - name: apici-ci-operator-credentials
-      secret:
-        items:
-        - key: sa.ci-operator.apici.config
-          path: kubeconfig
-        secretName: apici-ci-operator-credentials
     - name: cluster-profile
       projected:
         sources:
@@ -814,6 +678,3 @@ periodics:
     - name: pull-secret
       secret:
         secretName: ci-pull-credentials
-    - name: pull-secret
-      secret:
-        secretName: regcred
