--- a/ci-operator/config/openshift/openshift-ansible/openshift-openshift-ansible-release-4.4.yaml
+++ b/ci-operator/config/openshift/openshift-ansible/openshift-openshift-ansible-release-4.4.yaml
@@ -61,9 +61,8 @@ tag_specification:
   namespace: ocp
 test_binary_build_commands: |
   set -eo pipefail
-  yum install -y gcc libffi-devel python-devel openssl-devel
-  curl https://bootstrap.pypa.io/get-pip.py | python -
-  pip install tox
+  yum install -y gcc libffi-devel python-devel openssl-devel python3
+  pip3 install tox
   chmod uga+w /etc/passwd
 tests:
 - artifact_dir: /tmp/artifacts
