--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -55,23 +55,29 @@ tests:
     echo "KUBECONFIG: ${KUBECONFIG}"
     # enable nested-virt
     oc get machineset -n openshift-machine-api -o json >/tmp/machinesets.json
+    echo "before:"
+    cat /tmp/machinesets.json
     MACHINE_IMAGE=$(jq -r .items[0].spec.template.spec.providerSpec.value.disks[0].image /tmp/machinesets.json)
     NESTED_VIRT_IMAGE="rhcos43-nested-virt"
     sed -i 's/'"$MACHINE_IMAGE"'/'"$NESTED_VIRT_IMAGE"'/g' /tmp/machinesets.json
+    echo "after:"
+    cat /tmp/machinesets.json
     oc apply -f /tmp/machinesets.json
     oc scale --replicas=0 machineset --all -n openshift-machine-api
     oc get machines -n openshift-machine-api -o json >/tmp/machines.json
     num_machines=$(jq '.items | length' /tmp/machines.json)
     while [ "$num_machines" -ne "3" ]; do
+        sleep 5
         oc get machines -n openshift-machine-api -o json >/tmp/machines.json
         num_machines=$(jq '.items | length' /tmp/machines.json)
     done
     oc scale --replicas=1 machineset --all -n openshift-machine-api
     while [ "$num_machines" -ne "6" ]; do
+        sleep 5
         oc get machines -n openshift-machine-api -o json >/tmp/machines.json
         num_machines=$(jq '.items | length' /tmp/machines.json)
     done
-    while [ $(oc get nodes | wc -l) -ne "7" ]; do oc get nodes; done
+    while [ $(oc get nodes | wc -l) -ne "7" ]; do oc get nodes; sleep 5; done
     nodes_ready=false
     while ! "$nodes_ready"; do sleep 5 && if ! oc get nodes | grep NotReady; then nodes_ready=true; fi; done
     oc project default
